# wavelette

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  wavelette.pc.in
include/: image.h  spdimage.h
src/: image.cpp  spdimage.cpp
